Fix sidebar style on mobile

--- a/src/sass/layouts/_sidebar.scss
+++ b/src/sass/layouts/_sidebar.scss
@@ -3,18 +3,30 @@
   top: 0;
   right: 0;
   bottom: 0;
-  height: 100%;
   z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 
   &-content {
-    height: 100%;
-    @include rem(width, 96px);
+    width: 100%;
     @include rem(padding, 32px 24px);
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    border-left: 1px solid $color-stable-lighter;
+    border-top: 1px solid $color-stable-lighter;
+    flex-direction: row-reverse;
+
+    @media (min-width: $desktop) {
+      @include rem(width, 96px);
+      height: 100%;
+      flex-direction: column;
+      margin-left: auto;
+      border-top: 0;
+      border-left: 1px solid $color-stable-lighter;
+    }
 
     &__menu,
     &__cart,
@@ -34,7 +46,9 @@
     }
 
     &__menu {
-      @include rem(margin-bottom, 32px);
+      @media (min-width: $desktop) {
+        @include rem(margin-bottom, 32px);
+      }
 
       .button {
         @include rem(font-size, 40px);
@@ -68,13 +82,21 @@
 
     &__social {
       display: flex;
-      flex-direction: column;
+
+      @media (min-width: $desktop) {
+        flex-direction: column;
+      }
 
       &-item {
         @include rem(font-size, 24px);
 
         &:not(:last-child) {
-          @include rem(margin-bottom, 40px);
+          @include rem(margin-right, 24px);
+
+          @media (min-width: $desktop) {
+            margin-right: 0;
+            @include rem(margin-bottom, 40px);
+          }
         }
       }
     }
@@ -117,12 +139,18 @@
     &__close {
       position: absolute;
       left: 0;
-      top: 0;
-      transform: translate(-56px, 24px);
+      bottom: 0;
+      transform: translate(-56px, -24px);
       color: $white;
       @include rem(font-size, 40px);
       opacity: 0;
       transition: .5s opacity ease;
+
+      @media (min-width: $desktop) {
+        bottom: inherit;
+        top: 0;
+        transform: translate(-56px, 24px);
+      }
     }
 
     &__content {
